# proc-canonicalize-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ci-local.ps1  ci-local.sh
.github/workflows/: audit.yml  ci.yml  release.yml
src/: lib.rs
tests/: additional_security.rs  dotdot_normalization_bypass.rs  edge_cases.rs  public_api.rs
